<resources>
    <string name="app_name">HBEStore Login</string>

    <string name="string_text_view_usuario">Usuário</string>
    <string name="string_edit_text_usuario">Digite aqui o seu nome de usuário</string>
    <string name="string_text_view_senha">Senha</string>
    <string name="string_edit_text_senha">Digite aqui a sua senha</string>
    <string name="string_button_entrar">Entrar</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="abrir">abrir</string>
    <string name="fechar">fechar</string>
    <string name="API_KEY">AIzaSyDDcqVAhHFtrbz3vLcx8uG2XqbhtrUhqp4</string>
    <string name="title_activity_mapas">MapasActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>